# traceplot

./: README.md
examples/: .env.example  Makefile  README.md  example1.py  pyproject.toml  sample.gpx
traceplot/: .coverage  .gitignore  Makefile  README.md  pyproject.toml
traceplot/src/traceplot/: Trace.py  __init__.py
traceplot/src/traceplot/helpers/: __init__.py  greet.py
traceplot/src/traceplot/helpers/geo/: __init__.py
traceplot/src/traceplot/helpers/gmaps/: __init__.py
traceplot/src/traceplot/helpers/gpx/: __init__.py
traceplot/src/traceplot/helpers/graph/: __init__.py
traceplot/src/traceplot/map_providers/: Gmaps.py  MapProvider.py
traceplot/src/traceplot/types/: __init__.py
traceplot/tests/: test_hello.py
traceplot/tests/geo/: test_distance.py
traceplot/tests/gmaps/: test_bbox.py
traceplot/tests/graph/: test_ticks.py
