[project]
name = "traceplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Colin Dugeai", email = "colin.dugeai@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
