[project]
name = "traceplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Colin Dugeai", email = "colin.dugeai@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gpxpy>=1.6.2",
    "matplotlib>=3.10.3",
    "pyproj>=3.7.1",
    "requests>=2.32.4",
    "ruff>=0.12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
]
